Bug #35654: fix grids with too many buttons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54768 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
@@ -6,7 +6,15 @@
 }
 .umc .umcGridHeader {
   padding-bottom: 0.5em;
-  height: 45px;
+  display: inline-block;
+}
+
+.umc .umcGridHeader > *:after {
+	content: " ";
+	display: block;
+	clear: both;
+	height: 0px;
+	visibility: hidden;
 }
 
 .umc .dojoxGridHeader {
