--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/notifications.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/notifications.styl
@@ -7,7 +7,6 @@
 	top: 110px;
 	height: auto;
 	overflow: hidden;
-	z-index: 20;
 	display: inline-block;
 }
 
@@ -20,7 +19,7 @@
 	padding: 6px 10px;
 	left: 5px;
 	opacity: 1;
-
+	z-index: 20;
 
 	transition-duration: .75s;
 	transition-property: left, opacity;
@@ -45,6 +44,7 @@
 		transition-duration: .75s;
 		transition-property: max-height;
 		overflow: hidden;
+		word-wrap: break-word;
 	}
 
 //	.umcNotificationCloseButton {
