--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -43,7 +43,7 @@
 	padding: 3px 6px 5px 6px;
 	color: $text-color;
 	border-radius: $button-border-radius;
-	box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+	box-shadow: 0 0 2px rgba(0,0,0,0.15);
 
 	vertical-gradient-and-filter($button-gradient-top-color, $button-gradient-bottom-color);
 
@@ -122,6 +122,7 @@
 		background-position: -20px 0;
 		opacity: 0.66;
 	}
+	box-shadow: 0 1px 4px rgba(0,0,0,0.25);
 }
 
 /* active, checked status */
