--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -213,7 +213,7 @@ $image-tooltip ?= "images/tooltip.png";	// arrow connectors
 $image-tooltip-ie6 ?= "images/tooltip8bit.png";	// arrow connectors (8 bit)
 $image-tree-expand ?= "images/treeExpandImages.png";
 $image-tree-expand-ie6 ?= "images/treeExpandImages8bit.png";
-$image-progressbar-anim ?= "images/progressBarAnim*.gif";
+$image-progressbar-anim ?= "images/progressBarAnim.gif";
 
 // Mixins
 
