* Bug #35654: adapt drop down button icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54780 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Button.styl
@@ -78,28 +78,28 @@
 	//background-image:url("../" + $image-form-button-arrows);
 	//background-repeat:no-repeat;
 	//background-position:-51px 53%;
-	icon-image(0, 0, "../");
+	icon-image(-162, -20, "../", width: 16px);
 }
 .claro .dijitLeftArrowButton .dijitArrowButtonInner {
-	background-position: -80px 0;
+	background-position: -202px -20px;
 }
 .claro .dijitRightArrowButton .dijitArrowButtonInner {
-	background-position: -120px 0;
+	background-position: -222px -20px;
 }
 .claro .dijitUpArrowButton .dijitArrowButtonInner {
-	background-position: -40px 0;
+	background-position: -182px -20px;
 }
 .claro .dijitDisabled .dijitArrowButtonInner {
-	background-position: 0 -160px;
+	//background-position: 0 -160px;
 }
 .claro .dijitDisabled .dijitLeftArrowButton .dijitArrowButtonInner {
-	background-position: -240px 0;
+	//background-position: -240px 0;
 }
 .claro .dijitDisabled .dijitRightArrowButton .dijitArrowButtonInner {
-	background-position: -280px 0;
+	//background-position: -280px 0;
 }
 .claro .dijitDisabled .dijitUpArrowButton .dijitArrowButtonInner {
-	background-position: -160px 0;
+	//background-position: -160px 0;
 }
 
 .claro .dijitButtonText {
@@ -119,7 +119,6 @@
 	color:$text-color;
 	transition-duration: .2s;
 	.dijitArrowButtonInner {
-		background-position: -20px 0;
 		opacity: 0.66;
 	}
 	box-shadow: 0 1px 4px rgba(0,0,0,0.25);
@@ -135,7 +134,6 @@
 	box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2);
 	transition-duration: .1s;
 	.dijitArrowButtonInner {
-		background-position: -20px 0;
 		opacity: 1;
 	}
 }
