--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -251,12 +251,12 @@ transition-timing-function() {
 	transition-timing-function: arguments;
 }
 
-icon-image($xoffset=0, $yoffset=0, $dirprefix="", $filesuffix="", $width=20px, $height=20px) {
-	$_iconImage = replace("^(.*)(\.\w*)$", "$1" + $filesuffix + "$2", $image-icons)
-	$_url = $dirprefix + $_iconImage;
-	background: url($_url) unit($xoffset, px) unit($yoffset, px) no-repeat;
-	width: $width;
-	height: $height;
+icon-image(xoffset=0, yoffset=0, dirprefix="", filesuffix="", width=20px, height=20px) {
+	_iconImage = replace("^(.*)(\.\w*)", "$1" + filesuffix + "$2", $image-icons)
+	_url = dirprefix + _iconImage;
+	background: url(_url) unit(xoffset, px) unit(yoffset, px) no-repeat;
+	width: width;
+	height: height;
 }
 
 linear-gradient() {
