* Bug #35499: minor adjustment of page image positioning
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54781 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/js/setup.css
+++ b/base/univention-system-setup/umc/js/setup.css
@@ -72,8 +72,12 @@
 .umc-setup-page .umcPageIcon {
 	background-repeat: no-repeat;
 	height: 120px;
-	margin-left: 25%;
 	background-size: contain;
+	background-position: center bottom;
+}
+
+.umc .umc-setup-page .umcPageHelpText {
+	min-height: 50px;
 }
 
 @media (max-width: 768px) {
