--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Calendar.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Calendar.styl
@@ -127,7 +127,7 @@
 	padding-bottom:0;
 	text-align:center;
 	border-bottom:1px solid $border-color;
-	padding:0 3px 2px; !important
+	padding:0 3px 2px !important;
 	font-weight: bold;
 }
 .claro .dijitCalendarDayLabel {
