Bug #35654: * add replacements for UCS 3.x icons * adjust styling of module title * adjust tooltip styling * use smaller buttons in the grid header * use grey colors for loading animation * minor styling adjustments for the calendar
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54833 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
@@ -141,15 +141,15 @@
 .claro .dijitTooltipContainer {
 	/* the part with the text */
 	background-color:$popup-background-color;
-	linear-gradient(bottom, $tooltip-gradient-color 0px, $popup-background-color 10px);
+	//linear-gradient(bottom, $tooltip-gradient-color 0px, $popup-background-color 10px);
 	background-position:bottom;
 	border:1px solid $popup-border-color;
 	padding:6px 8px;
 	border-radius: 4px;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+	box-shadow: 0 0px 10px rgba(0,0,0,0.15);
 	font-size: 1em;
 	color: $text-color;
-} 
+}
 
 .claro .dijitTooltipConnector {
 	/* the arrow piece */
