--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/module.styl
@@ -33,7 +33,7 @@
 	width: 100%;
 	margin-bottom: 2em;
 	padding-top: 25px;
-	padding-bottom: 20px;
+	padding-bottom: @padding-top;
 
 	.umcModuleHeaderWrapper {
 		margin: auto;
@@ -99,6 +99,7 @@ body.umc:not([class~=umcHeadless]) .umcModuleHeader {
 	font-size: $font-size-large;
 	color: $text-color-dark-background;
 	font-weight: bold;
+	line-height: 1em;
 }
 
 .umc .umcModule {
