--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Calendar.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Calendar.styl
@@ -143,7 +143,7 @@
 	padding-top:0;
 	font-size:0.909em;
 	font-family: Clear Sans, Arial, Helvetica, sans-serif;
-	font-weight:bold;
+	//font-weight:bold;
 	letter-spacing:.05em;
 	text-align:center;
 	color: $text-color;
@@ -181,7 +181,7 @@
 .claro .dijitCalendarYearLabel {
 	padding: 2px 0 0 0;
 	margin: 0;
-	font-size: 1.17em;
+	font-size: $font-size-buttons;
 }
 .claro .dijitCalendarYearLabel span {
 	/* trying to center next/current/previous year vertically, doesn't work on IE6/7 though */
@@ -193,11 +193,12 @@
 .claro .dijitCalendarNextYear,
 .claro .dijitCalendarPreviousYear {
 	padding: 1px 6px 1px 6px;
-	font-size:0.909em;
+	//font-size:0.909em;
 }
 .claro .dijitCalendarSelectedYear {
-	font-size:1.091em;
+	//font-size:1.091em;
 	color:$selected-text-color;
+	font-weight: bold;
 }
 /* End Normal Calendar Style */
 /* Hovered Calendar Style */
@@ -221,7 +222,8 @@
 .claro .dijitCalendarPreviousYearActive, .claro .dijitCalendarPreviousYear:active {
 	border: solid 1px $calendar-button-pressed-border-color;
 	padding: 0 5px 0 5px;	/* reduced by 1 to make room for border */
-	background-color:$calendar-button-pressed-background-color;
+	background-color: $calendar-date-selected-background-color;
+	//background-color:$calendar-button-pressed-background-color;
 }
 .claro .dijitCalendarActiveDate .dijitCalendarDateLabel,
 .claro .dijitCalendarEnabledDate:active .dijitCalendarDateLabel {
@@ -238,6 +240,7 @@
 	color:$selected-text-color;
 	background-color: $calendar-date-selected-background-color;
 	border-color: $calendar-date-selected-border-color;
+	font-weight: bold;
 }
 /* End Selected Calendar Style */
 /* Disabled Calendar Style*/
@@ -307,5 +310,7 @@
 .claro .dijitCalendarMonthMenu .dijitCalendarMonthLabel:hover {
 	border-color: $hovered-border-color;
 	border-width:1px 0;
-	gradient-and-filter($hovered-background-color, 70, 0);
+	background-color: $hovered-background-color;
+	color:$text-color-dark-background;
+	//gradient-and-filter($hovered-background-color, 70, 0);
 }
