--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
@@ -4,9 +4,20 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
 .umc .umcGridHeader {
-  padding-bottom: 0.5em;
-  display: inline-block;
+	padding-bottom: 0.5em;
+	display: inline-block;
+
+	.dijitButton,
+	.dijitDropDownButton {
+		.dijitButtonNode {
+			padding: 3px;
+		}
+		.dijitButtonText {
+			font-size: 1em;
+		}
+	}
 }
 
 .umc .umcGridHeader > *:after {
