--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/variables.styl
@@ -209,7 +209,7 @@ $image-form-error ?= "form/images/error.svg";
 $image-form-slider-thumbs ?= "form/images/sliderThumbs.png";
 $image-layout-tab-close ?= $image-icons;	// [x] icon to close a tab
 $image-loading-animation ?= "images/loadingAnimation.gif";
-$image-tooltip ?= "images/tooltip.png";	// arrow connectors
+$image-tooltip ?= "images/tooltip.svg";	// arrow connectors
 $image-tooltip-ie6 ?= "images/tooltip8bit.png";	// arrow connectors (8 bit)
 $image-tree-expand ?= "images/treeExpandImages.png";
 $image-tree-expand-ie6 ?= "images/treeExpandImages8bit.png";
